  Made improvement MR-419 - Password prompt dialog should have a meaningful window title
  Made improvement MR-486 - Allow escaping of variable names for external tools
  Made improvement MR-590 - Make panels docked to the edge of the window keep their size
  Fixed issue MR-187 - F7 keyboard shortcut for New Folder conflicts with remote connections
  Fixed issue MR-594 - Crash on startup if write access is denied to the IE browser emulation registry key
  Fixed issue MR-603 - Some configuration options are still shown even when inheritance is enabled
  Added "Reset" to config panel context menu to allow resetting some config settings to their default value.
  Added and improved menu icons.
  Removed misleading log messages about RD Gateway support.
  Removed invalid "Site" configuration option from PuTTY Saved Sessions.
  Fixed PuTTY Saved Sessions still showing if all saved sessions are removed.
  Fixed config panel showing settings from previously loaded connection file after loading a new one.
  Improved handling of variables in external tool arguments.

1.72 (2013-11-13):
  Fixed issue MR-592 - Unable to run VBS script as an external tool
  Fixed issue MR-596 - Incorrect escaping of quotation marks in external tool arguments

1.71 (2013-10-29):
  Fixed issue MR-574 - Crash when retrieving RDP session list if eolwtscom.dll is not registered
  Fixed issue MR-578 - Connections file is reset
  Fixed log file not showing operating system version on Windows XP and Windows Server 2003.
  Fixed the wrong connections file opening on startup under certain conditions.
  Fixed checking for updates even when disabled.
  Improved error reporting when loading connections files.
  Removed warning message when mRemoteNG is started for the first time about new connections file being created.

1.71 Release Candidate 2 (2013-10-16):
  Fixed issue MR-560 - Cannot Auto-Update With Open Connections: Unable to find an entry point named 'TaskDialogIndirect' in DLL 'ComCtl32'